tests/cases/errors/dpi_export_unsupported/main.sv
module Top;
  export "DPI-C" function get_val;

  function automatic int unsigned get_val();
    return 42;
  endfunction
endmodule
